# LocalAirtrafficTUI

./: Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: release.yml  rust.yml
src/: api.rs  app.rs  geo.rs  main.rs  ui.rs
