[package]
name = "LocalAirtrafficTUI"
version = "1.2.0"
edition = "2024"
description = "A TUI for monitoring local air traffic"
license = "MIT"
repository = "https://github.com/Brasilius/LocalAirtrafficTUI"
readme = "README.md"
keywords = ["tui", "aviation", "adsb", "terminal"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = "0.4"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

[[bin]]
name = "LocalAirTraffic"
path = "src/main.rs"
